@@ -55,7 +55,9 @@ public class Box extends JComponent implements Accessible
 {
   private static final long serialVersionUID = 1525417495883046342L;
   
-  protected class AccessibleBox extends AccessibleAWTContainer
+  protected class AccessibleBox 
+  // FIXME: disable to make libjava compile; visibility rules are broken
+  // extends Container.AccessibleAWTContainer
   {
     private static final long serialVersionUID = -7775079816389931944L;
   
@@ -73,7 +75,9 @@ public class Box extends JComponent implements Accessible
   {
     private static final long serialVersionUID = -1204263191910183998L;
   
-    protected class AccessibleBoxFiller extends AccessibleAWTComponent
+    protected class AccessibleBoxFiller 
+    // FIXME: disable to make libjava compile; visibility rules are broken
+    // extends Component.AccessibleAWTComponent
     {
       private static final long serialVersionUID = 164963348357479321L;
       
@@ -105,8 +109,9 @@ public class Box extends JComponent implements Accessible
     
     public AccessibleContext getAccessibleContext()
     {
-//      if (accessibleContext == null)
-//        accessibleContext = new AccessibleBoxFiller();
+      // FIXME: disable to make libjava compile; visibility rules are broken      
+      //      if (accessibleContext == null)
+      //        accessibleContext = new AccessibleBoxFiller();
       return accessibleContext;
     }
     
@@ -178,8 +183,8 @@ public class Box extends JComponent implements Accessible
   
   public AccessibleContext getAccessibleContext()
   {
-    if (accessibleContext == null)
-      accessibleContext = new AccessibleBox();
+    //     if (accessibleContext == null)
+    //       accessibleContext = new AccessibleBox();
     return accessibleContext;
   }
   
