@@ -1,3 +1,8 @@
+2004-06-08  Graydon Hoare  <graydon@redhat.com>
+
+	* javax/swing/Box.java: Temporarily comment out code
+	broken due to visibility bug.
+
 2004-06-09  Michael Koch  <konqueror@gmx.de>
 
 	* javax/swing/ImageIcon.java
